# theSwiszard

./: .gitignore  main.py
.hermes/plans/: 2026-06-04_190000-ast3d-tool.md  2026-06-05_swisznet-consolidation.md
hermes_integration/: __init__.py  http_server.py  pm_filter.py  pyproject.toml  server.py  server.py.bak
scripts/: daily-backup.sh
swiszard/: .gitignore  MAINTENANCE.md  README.md  SPEC_MEMORY_AND_PREPARERS.md  health.py  instrument.py  mcp_client.py  mcp_server.py  prune_examples.py  pyproject.toml  run_memory_server.py  server.py
swiszard/mcp_local/: server.py
swiszard/memory_server/: __init__.py  app.py  code_index.py  context_store.py  db.py  embed.py  embedding_rows.py  looking_glass.py  pm_routes.py  projects.py
swiszard/scripts/: migrate_curated_layer.py  migrate_hermes_history.py
swiszard/swiszard/: __init__.py  db.py  embeddings.py  handlers.py  health.py  narrate.py  proactive_inject.py  router.py  seeds.py
swiszard/tests/: test_learning_loop.py
swiszcli/: .gitignore  README.md  pyproject.toml
swiszcli/archived_2026-06-05/: dream_cli.py  propose_cli.py
swiszcli/contrib/systemd/: README.md  swiszcli-dream.service  swiszcli-dream.timer
swiszcli/docs/ideas/: 2026-06-01-mvp-build-plan.md  2026-06-01-sean-memory-ideas.md  2026-06-01-swiszrouter.md
swiszcli/docs/plans/: 2026-06-01-memory-palace.md
swiszcli/swiszcli/: __init__.py  agent.py  archive.py  callables.py  chain_credit.py  cli.py  cli_pre_pivot.py  config.py  context_assembly.py  context_store.py  display.py  dream_cycle.py  edit_wizards.py  env.py  federation.py  federation_cli.py  gap_detector.py  learn.py  llm_cloud.py  mem_browser.py  mem_dispatch.py  memory.py  pools.py  proj_dispatch.py  project_state.py  prompt.py  research_wizard.py  rich_output.py  router_hint.py  safety.py  script_runner.py  sequence_learn.py  session_logger.py  shape_miner.py  source_weights.py  stats.py  swisz_log.py  swisz_log_cli.py  swiszard_bridge.py  swiszproj.py  (+9 more)
swiszcli/swiszcli/_archive_old/: ast_index.py  chain_credit.py  chunks.py  ctx_budget.py  display.py  edit_engine.py  embed.py  headless.py  identity.py  llm.py  prompt.py  proof_loop.py  protocol.py  router.py  scratchpad.py  scratchpad_wizards.py  sessions.py  source_weights.py  speculative.py  status_cli.py  swisz_log_cli.py  trajectory.py  wizard_ptk.py  wizards_mem.py  wizards_meta.py
swiszcli/swiszcli/swisznet/: __init__.py
swiszcli/tests/: test_agent_safety.py  test_archive.py  test_ast_edit.py  test_edit_wizards.py  test_harness_phases.py  test_p0_integration.py  test_p0_smoke.py  test_p1_5_gap.py  test_p1_6a_identity.py  test_p1_7_honesty.py  test_p1_learn.py  test_p2_dream.py  test_p3_federation.py  test_phase7.py  test_pick_or_new.py  test_project_state.py  test_safety.py  test_scratchpad.py  test_sequence_learn.py  test_smoke.py  test_tool_synthesis.py  test_trace.py  test_wizard_store.py  test_wizards_meta.py
swiszcode/: ast_extract.py  ast_lint.py  ast_pin.py  ast_rope.py  ast_store.py  ast_transform.py  index.html  pipeline.py  pyproject.toml  server.py  viewer.html
swiszcontext/: pyproject.toml
swiszcontext/swiszcontext/: __init__.py  store.py
swiszproj/: README.md  pyproject.toml
swiszproj/swiszproj/: client.py  pm_backup.py  server_engine.py  types.py  wizards.py
swiszproj/swiszproj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
