[project]
name = "swiszard"
version = "0.1.0"
description = "Deterministic router and memory server"
requires-python = ">=3.10"
dependencies = [
    "libcst",
    "black"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swiszard*", "memory_server*"]
