[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "swiszcontext"
version = "0.1.0"
description = "Conversation frame trace — overlapping sessions, pure similarity retrieval"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["swiszcontext*"]
